--- a/biblio/dsym.bib
+++ b/biblio/dsym.bib
@@ -116,8 +116,8 @@
 % Egy kis GAP program leirasa.
 @phdthesis{F94,
   author  = "O. Delgado-Friedrichs",
-  title   = "Euclidicity Criteria for Three-Dimensional Branched
-    Triangulations",
+  title   = "Euclidicity criteria for three-dimensional branched
+    triangulations",
   year    = "1994",
   school  = "University of Bielefeld"
 }
@@ -154,7 +154,7 @@
   title   = "Discontinous groups in homogeneous {R}iemannian spaces by
     classification of {D}-symbols",
   year    = "1996",
-  journal = "Publications Mathematicae",
+  journal = "Publicationes Mathematicae Debrecen.",
   volume  = "49",
   number  = "3-4",
   pages   = "265--294",
@@ -208,7 +208,7 @@
 
 @article{M11,
   author  = "E. Molnár",
-  title   = "On D-Symbols and Orbifolds in an Algorithmic Way",
+  title   = "On {D}-Symbols and orbifolds in an algorithmic way",
   year    = "2011",
   journal = "Atti Semin. Mat. Fis. Univ. Modena Reggio Emilia",
   volume  = "58",
@@ -217,7 +217,7 @@
 
 @article{K11,
   author  = "R. Kós",
-  title   = "Realization of D-symbols represented by Coxeter groups",
+  title   = "Realization of {D}-symbols represented by {C}oxeter groups",
   year    = "2011",
   journal = "Atti Semin. Mat. Fis. Univ. Modena Reggio Emilia",
   volume  = "58",
